Added scheduled dataloader (#4)
Version 2.1.1
* Fixed logging
* Added configuration for reschedule-interval and scheduler-pool-size
* Fixed support for BigDecimal scalar